Implement Bytes hierarchy minus MutableBytes